--- a/main.html
+++ b/main.html
@@ -3,14 +3,39 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>My Portfolio</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
+    <header>
+        <img src="https://rb.gy/m7hqz"
+            target="_blank" height="100px" alt="Profile Picture">
+        <h1>Medam Udhay kumar Reddy</h1>
+    </header>
 
+ <a href="https://www.linkedin.com/in/mudhay/" target="_blank">LinkedIn</a>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>
+            Here are some of my skills:
+			HTML, CSS, JavaScript, Java, NoSQL, etc.
+		</p>
+	</section>
+
+	<section id="projects">
+		<h2>Projects</h2>
+		<ul>
+			<li>Project 1</li>
+			<li>Project 2</li>
+			<li>Project 3</li>
+			<li>Project s4</li>
+		</ul>
+	</section>
 </body>
 
 </html>
